--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".EditorActivity"
-            android:label="Edit Product">
+            android:parentActivityName=".InventoryActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".InventoryActivity" />
 
         </activity>
         <provider
